# pcore_cpp

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  test_PcoreDifferentialBlock.cpp
bash folder/: INSTALL_PROTOBUF.sh
configure/: pcoreConfig.h.in
docker/: Dockerfile  Makefile  deploy.env
include/: AbsoluteBlock.h  AbsoluteTimestamps.h  AbsoluteTimestampsContainer.h  AccMetaData.h  BlockIdx.h  Channel.h  Data.h  DataForm.h  DataFormat.h  DeserializedAccMetaData.h  DeserializedDifferentialTimestamps.h  DeserializedDifferntialBlock.h  DeserializedHeader.h  DeserializedPpgMetaData.h  DeserializedVersion.h  DifferentialBlock.h  DifferentialTimestamps.h  DifferentialTimestampsContainer.h  Exceptions.h  Header.h  IPCore.h  PcoreAbsoluteBlock.h  PcoreAbsoluteTimestamps.h  PcoreDataFormat.h  PcoreJson.h  PcoreJsonKey.h  PcoreProtobuf.h  PpgMetaData.h  Raw.h  Sensor.h  UnixTimestamp.h  Version.h  pcore_extern.h
scripts/: GENERATE_PROTO_DATA.sh  INSTALL_PROTOBUF.sh  init_Protobuf.sh
src/: AbsoluteBlock.cpp  AbsoluteTimestamps.cpp  AbsoluteTimestampsContainer.cpp  AccMetaData.cpp  CMakeLists.txt  Channel.cpp  Data.cpp  DeserializedAccMetaData.cpp  DeserializedDifferentialBlock.cpp  DeserializedDifferentialTimestamps.cpp  DeserializedHeader.cpp  DeserializedPpgMetaData.cpp  DeserializedVersion.cpp  DifferentialBlock.cpp  DifferentialTimestamps.cpp  DifferentialTimestampsContainer.cpp  Header.cpp  PcoreAbsoluteBlock.cpp  PcoreAbsoluteTimestamps.cpp  PpgMetaData.cpp  Raw.cpp  Sensor.cpp  Version.cpp  pcore_extern.cpp
test/: CMakeLists.txt  test_AbsoluteBlock.cpp  test_AbsoluteTimestamps.cpp  test_AbsoluteTimestampsContainer.cpp  test_AccMetaData.cpp  test_CalculateAbsoluteAndDifferentialDataForm.cpp  test_Channel.cpp  test_Data.cpp  test_DifferentialBlock.cpp  test_DifferentialTimestamps.cpp  test_DifferentialTimestampsContainer.cpp  test_Header.cpp  test_Json.cpp  test_PCoreDifferentialBlock.cpp  test_PcoreAbsoluteBlock.cpp  test_PcoreAbsoluteTimestamps.cpp  test_PcoreAccMetaData.cpp  test_PcoreDifferentialTimestamps.cpp  test_PcoreHeader.cpp  test_PcoreJson.cpp  test_PcorePpgMetaData.cpp  test_PcoreProtobuf.cpp  test_PcoreVersion.cpp  test_PpgMetaData.cpp  test_Raw.cpp  test_Sensor.cpp  test_Version.cpp  test_pcore.cpp  test_sensor.cpp
test/JsonTestData/: absolute_example.json  absolute_pcore.json  absolute_pcore_json.json  differential_example.json  differential_pcore.json  differential_pcore_json.json
test/JsonTestData/optimalData/: 1.json  2.json  3.json  4.json  5.json
test/JsonTestData/pessimalData/: 1.json  2.json  3.json  4.json  5.json
test/JsonTestData/realisticData/: 1.json  2.json  3.json  4.json  5.json
test/exampleFactories/include/: AbsoluteBlockExampleFactory.h  AbsoluteTimestampsContainerExampleFactory.h  AbsoluteValuesExampleFactory.h  AccMetaDataExampleFactory.h  ChannelExampleFactory.h  DataExampleFactory.h  DifferencesExampleFactory.h  DifferentialBlockExampleFactory.h  DifferentialTimestampsContainerExampleFactory.h  DifferentialValuesExampleFactory.h  HeaderExampleFactory.h  IntervalsExampleFactory.h  PpgMetaDataExampleFactory.h  RawExampleFactory.h  SensorExampleFactory.h  UnixTimestampsExampleFactory.h  VersionExampleFactory.h
test/exampleFactories/src/: AbsoluteBlockExampleFactory.cpp  AbsoluteTimestampsContainerExampleFactory.cpp  AbsoluteValuesExamplesFactory.cpp  AccMetaDataExampleFactory.cpp  ChannelExampleFactory.cpp  DataExampleFactory.cpp  DifferencesExampleFactory.cpp  DifferentialBlockExampleFactory.cpp  DifferentialTimestampsContainerExampleFactory.cpp  DifferentialValuesExampleFactory.cpp  HeaderExampleFactory.cpp  IntervalsExampleFactory.cpp  PpgMetaDataExampleFactory.cpp  RawExampleFactory.cpp  SensorExampleFactory.cpp  UnixTimestampsExampleFactory.cpp  VersionExampleFactory.cpp
