SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test/bin)
SET(BINARY ${CMAKE_PROJECT_NAME}_test)
INCLUDE_DIRECTORIES(${COMMON_INCLUDES})
INCLUDE(FetchContent)
FETCHCONTENT_DECLARE(   
    googletest
    GIT_REPOSITORY https://github.com/google/googletest.git
    GIT_TAG        release-1.12.1 
)
FETCHCONTENT_MAKEAVAILABLE(googletest)
INCLUDE_DIRECTORIES(${gtest__INCLUDE_DIRS})
FILE(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)

ADD_EXECUTABLE(
    runUnitTests
    ${TEST_SRC_FILES}
)

INCLUDE(GoogleTest)
TARGET_LINK_LIBRARIES(runUnitTests gtest gtest_main)
TARGET_LINK_LIBRARIES(runUnitTests libpcore_extern)
gtest_DISCOVER_TESTS(runUnitTests)

